--- a/app2/build.gradle
+++ b/app2/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.3'
+    compileSdk 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.tsu.tshttp"
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdk 28
         versionCode 1
         versionName "1.0"
 
